src/objects/Portfolio_Review__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Account)</relationshipLabel>
        <relationshipName>Portfolio_Reviews3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Preference_1__c</fullName>
        <label>Client Preference 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Preference</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Preference_2__c</fullName>
        <label>Client Preference 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Preference</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Considering_Vendor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considering Vendor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Considering Vendor 1)</relationshipLabel>
        <relationshipName>Portfolio_Reviews4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Considering_Vendor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considering Vendor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Considering Vendor 2)</relationshipLabel>
        <relationshipName>Portfolio_Reviews5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Considering_Vendor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considering Vendor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Considering Vendor 3)</relationshipLabel>
        <relationshipName>Portfolio_Reviews6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portfolio Reviews</relationshipLabel>
        <relationshipName>Portfolio_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Management_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Management Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Current Management Company)</relationshipLabel>
        <relationshipName>Portfolio_Reviews7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_of_Segments__c</fullName>
        <label>Estimated Annual # of Segments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flying_Private_Since__c</fullName>
        <label>Flying Private Since?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to private travel</fullName>
                </value>
                <value>
                    <fullName>A few years, relatively new</fullName>
                </value>
                <value>
                    <fullName>Flying private for a while</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historical_Management_Companies__c</fullName>
        <label>Historical Management Companies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historical_Vendors_Notes__c</fullName>
        <label>Historical Vendors Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Historical_Vendors__c</fullName>
        <label>Historical Vendors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Likes_Dislikes_Vendor_2__c</fullName>
        <label>Likes/Dislikes Vendor 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likes_Dislikes_Vendor_3__c</fullName>
        <label>Likes/Dislikes Vendor 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Llikes_Dislikes_Vendor_1__c</fullName>
        <label>Llikes/Dislikes Vendor 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_about_Vendors_being_Considered__c</fullName>
        <label>Notes about Vendors being Considered</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owned_AC_Tail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owned AC Tail #</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Portfolio Reviews</relationshipLabel>
        <relationshipName>Portfolio_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_Day_Traveler__c</fullName>
        <label>Peak Day Traveler?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, primarily</fullName>
                </value>
                <value>
                    <fullName>50/50 mix</fullName>
                </value>
                <value>
                    <fullName>Not usually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Program_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Program 1</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Portfolio Reviews</relationshipLabel>
        <relationshipName>Portfolio_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Program_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Program 2</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Portfolio Reviews (Primary Program 2)</relationshipLabel>
        <relationshipName>Portfolio_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Program_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Program 3</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Portfolio Reviews (Primary Program 3)</relationshipLabel>
        <relationshipName>Portfolio_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Vendor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews</relationshipLabel>
        <relationshipName>Portfolio_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Vendor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Primary Vendor 2)</relationshipLabel>
        <relationshipName>Portfolio_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Vendor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Reviews (Primary Vendor 3)</relationshipLabel>
        <relationshipName>Portfolio_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Profile_Business_Trips__c</fullName>
        <label>Risk Profile - Business Trips</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Risk_Profile</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Profile_Personal_Trips__c</fullName>
        <label>Risk Profile - Personal Trips</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Risk_Profile</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typical_Routes__c</fullName>
        <label>Typical Routes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Whole_AC_Ownership_Status__c</fullName>
        <label>Whole AC Ownership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never owned whole aircraft</fullName>
                </value>
                <value>
                    <fullName>Used to own whole aircraft</fullName>
                </value>
                <value>
                    <fullName>Currently owns whole aircraft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Trips_Personal__c</fullName>
        <label>% of Trips Personal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Portfolio Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portfolio Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>